Chore/serde restructure (#85)
* refactor: move protohandler codebase to common and use new source sink APIs